--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:api": "node test-api-key.js"
   },
   "dependencies": {
+    "firebase": "^12.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
@@ -35,4 +36,3 @@
     "workbox-window": "^7.0.0"
   }
 }
-
